error hanling added

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </tr>
             </tbody>
         </table> -->
-        <input type="text" id="new-name" placeholder="Another city's name"><br>
+        <input type="text" id="new-name" placeholder="Another city/state/country"><br>
         <button id="get-weather">Get weather</button>
 
     </div>
