change to gradients

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 <body>
 
     <div class="container">
-        <p><span id="city"></span></p>
-        <p><span id="description"></span></p>
-        <img id="weather-img">
-        <p id="temp-p"><span id="temp"></span>° <span id="c-f">C</span></p>
+        <p><span id="city">Please allow this app to know your location</span></p>
+        <div id="desc">
+            <img id="weather-img">
+            <p><span id="description">Or use the input box below</span></p>
+        </div>
+        <p id="temp-p"><span id="temp">?</span>° <span id="c-f">C</span></p>
         <input type='checkbox' id='format'><br>
         <!-- <table>
             <tbody>
